@@ -1,7 +1,0 @@
-# ChangeLog for media-plugins/azr3-lv2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
-  added a changelog
-
