@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  10 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net> package.mask:
+  remove media-plugins/azr3-lv2
 
   29 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net> package.mask:
   Update package.mask.
